fix a bug of using wrong command

--- a/src/PCA_logisticReg/PCA_logisticReg.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -10,6 +10,7 @@
    "source": [
     "import csv\n",
     "import numpy as np\n",
+    "import random as rand\n",
     "from sklearn import linear_model, preprocessing\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.cross_validation import KFold"
@@ -17,11 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-57-17cd61136570>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-17cd61136570>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def E_abs(y_predict,y):\n",
     "    E=0\n",
@@ -32,16 +42,18 @@
     "def E_01(y_predict,y):\n",
     "    y_temp=[]\n",
     "    for i in range(len(y)):\n",
-    "        if y_predict[i]>=0.5:\n",
+    "        if y_predict[i]>0.5:\n",
     "            y_temp.append(1)\n",
-    "        else:\n",
+    "        elif y_predict[i]==0.5:\n",
+    "            y_temp.append(rand.randint(0,1))\n",
+    "        else\n",
     "            y_temp.append(0)\n",
     "    return E_abs(y_temp,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -109,21 +121,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_Eval_01: 0.142717462606 best_n_components 15 best_c: 0.1\n"
+      "best_Eval_01: 0.14184643537 best_n_components 16 best_c: 1000\n",
+      "best_Eval_abs: 0.153699003836 best_n_components 10 best_c: 0.0001\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=0.1, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -133,6 +133,7 @@
     "c_list[:]=[10 ** x for x in c_list]\n",
     "n_components_list=range(10,18)\n",
     "best_Eval_01=1\n",
+    "best_Eval_abs=1\n",
     "for c in c_list:\n",
     "    for n_components in n_components_list:\n",
     "        Ein_01=[]\n",
@@ -148,28 +149,30 @@
     "            x_train_reduce = pca.transform(x_train)\n",
     "            logistic = linear_model.LogisticRegression(C=c)\n",
     "            logistic.fit(x_train_reduce,y_train)\n",
-    "            y_train_predict = logistic.predict(x_train_reduce)\n",
+    "            y_train_predict = logistic.predict_proba(x_train_reduce)\n",
+    "            y_train_predict = y_train_predict[:,1]\n",
     "            Ein_01.append(E_01(y_train_predict,y_train))\n",
     "            Ein_abs.append(E_abs(y_train_predict,y_train))\n",
     "            x_val_reduce = pca.transform(x_val)\n",
-    "            y_val_predict = logistic.predict(x_val_reduce)\n",
+    "            y_val_predict = logistic.predict_proba(x_val_reduce)\n",
+    "            y_val_predict = y_val_predict[:,1]\n",
     "            Eval_01.append(E_01(y_val_predict,y_val))\n",
     "            Eval_abs.append(E_abs(y_val_predict,y_val))\n",
     "        if sum(Eval_01)/n_folds<best_Eval_01:\n",
     "            best_Eval_01=sum(Eval_01)/n_folds\n",
-    "            best_n_components=n_components\n",
-    "            best_c=c\n",
-    "print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components,\"best_c:\",best_c)\n",
-    "pca = PCA(n_components=best_n_components)\n",
-    "pca.fit(x)\n",
-    "x_reduce = pca.transform(x)\n",
-    "logistic = linear_model.LogisticRegression(C=best_c)\n",
-    "logistic.fit(x_reduce,y)"
+    "            best_n_components_01=n_components\n",
+    "            best_c_01=c\n",
+    "        if sum(Eval_abs)/n_folds<best_Eval_abs:\n",
+    "            best_Eval_abs=sum(Eval_01)/n_folds\n",
+    "            best_n_components_abs=n_components\n",
+    "            best_c_abs=c\n",
+    "print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
+    "print(\"best_Eval_abs:\",best_Eval_abs,\"best_n_components\",best_n_components_abs,\"best_c:\",best_c_abs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -194,38 +197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#training(track 1)\n",
+    "pca = PCA(n_components=best_n_components_abs)\n",
+    "pca.fit(x)\n",
+    "x_reduce = pca.transform(x)\n",
+    "logistic = linear_model.LogisticRegression(C=best_c_abs)\n",
+    "logistic.fit(x_reduce,y)\n",
     "#predict testing data\n",
     "x_test_reduce=pca.transform(x_test)\n",
-    "y_test_predict = logistic.predict(x_test_reduce)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "y_test_predict = logistic.predict_proba(x_test_reduce)\n",
+    "y_test_predict = y_test_predict[:,1]\n",
     "output_track1=np.vstack((x_test[:,0],y_test_predict))\n",
-    "output_track1=np.transpose(output_track1)\n",
-    "output_track2=np.copy(output_track1)\n",
-    "for i in range(len(output_track2)):\n",
-    "    if output_track2[i][1]>=0.5:\n",
-    "        output_track2[i][1]=1\n",
-    "    else:\n",
-    "        output_track2[i][1]=0"
+    "output_track1=np.transpose(output_track1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +229,38 @@
     "with open(\"../../result/PCA_logisticReg/test_track1.csv\",\"w\") as f:\n",
     "    w=csv.writer(f)\n",
     "    w.writerows(output_track1)\n",
-    "    f.close()\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#training(track 2)\n",
+    "pca = PCA(n_components=best_n_components_01)\n",
+    "pca.fit(x)\n",
+    "x_reduce = pca.transform(x)\n",
+    "logistic = linear_model.LogisticRegression(C=best_c_01)\n",
+    "logistic.fit(x_reduce,y)\n",
+    "#predict testing data\n",
+    "x_test_reduce=pca.transform(x_test)\n",
+    "y_test_predict = logistic.predict(x_test_reduce)\n",
+    "output_track2=np.vstack((x_test[:,0],y_test_predict))\n",
+    "output_track2=np.transpose(output_track2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "with open(\"../../result/PCA_logisticReg/test_track2.csv\",\"w\") as f:\n",
     "    w=csv.writer(f)\n",
     "    w.writerows(output_track2)\n",
