update result of PCA_logistic regression

--- a/src/PCA_logisticReg/PCA_logisticReg.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,20 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-57-17cd61136570>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-17cd61136570>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def E_abs(y_predict,y):\n",
     "    E=0\n",
@@ -46,14 +37,14 @@
     "            y_temp.append(1)\n",
     "        elif y_predict[i]==0.5:\n",
     "            y_temp.append(rand.randint(0,1))\n",
-    "        else\n",
+    "        else:\n",
     "            y_temp.append(0)\n",
     "    return E_abs(y_temp,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +53,8 @@
     "#read training features\n",
     "x=[]\n",
     "temp=0\n",
-    "with open(\"../../data/ML_final_project/sample_train_x.csv\") as f:\n",
+    "#with open(\"../../data/ML_final_project/sample_train_x.csv\") as f:\n",
+    "with open(\"../../data/combine_sample_and_course_train_x.csv\") as f:\n",
     "    for row in csv.reader(f):\n",
     "        if temp==0:\n",
     "            for i in range(len(row)): \n",
@@ -73,12 +65,13 @@
     "                x[i].append(float(value))\n",
     "    f.close()\n",
     "x=np.array(x)\n",
+    "dimensions=len(x)\n",
     "x=np.transpose(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -121,8 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_Eval_01: 0.14184643537 best_n_components 16 best_c: 1000\n",
-      "best_Eval_abs: 0.153699003836 best_n_components 10 best_c: 0.0001\n"
+      "best_Eval_01: 0.141068693847 best_n_components 31 best_c: 0.1\n",
+      "best_Eval_abs: 0.157898554505 best_n_components 10 best_c: 0.0001\n"
      ]
     }
    ],
@@ -131,7 +124,7 @@
     "n_folds=10\n",
     "c_list=list(range(-4,5))\n",
     "c_list[:]=[10 ** x for x in c_list]\n",
-    "n_components_list=range(10,18)\n",
+    "n_components_list=range(10,dimensions)\n",
     "best_Eval_01=1\n",
     "best_Eval_abs=1\n",
     "for c in c_list:\n",
@@ -172,16 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#read testing data\n",
     "x_test=[]\n",
     "temp=0\n",
-    "with open('../../data/ML_final_project/sample_test_x.csv') as f:\n",
+    "#with open('../../data/ML_final_project/sample_test_x.csv') as f:\n",
+    "with open('../../data/combine_sample_and_course_test_x.csv') as f:\n",
     "    for row in csv.reader(f):\n",
     "        if temp==0:\n",
     "            for i in range(len(row)): \n",
@@ -197,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -219,14 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#write predict result to file\n",
-    "with open(\"../../result/PCA_logisticReg/test_track1.csv\",\"w\") as f:\n",
+    "#with open(\"../../result/PCA_logisticReg/test_track1.csv\",\"w\") as f:\n",
+    "with open(\"../../result/PCA_logisticReg/test_track1_v2.csv\",\"w\") as f:\n",
     "    w=csv.writer(f)\n",
     "    w.writerows(output_track1)\n",
     "    f.close()"
@@ -234,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -255,13 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with open(\"../../result/PCA_logisticReg/test_track2.csv\",\"w\") as f:\n",
+    "#with open(\"../../result/PCA_logisticReg/test_track2.csv\",\"w\") as f:\n",
+    "with open(\"../../result/PCA_logisticReg/test_track2_v2.csv\",\"w\") as f:\n",
     "    w=csv.writer(f)\n",
     "    w.writerows(output_track2)\n",
     "    f.close()"
