add PCA+logistic server script and update feature

--- a/src/PCA_logisticReg/PCA_logisticReg_single_feat1_time.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_single_feat1_time.ipynb
@@ -8,12 +8,14 @@
    },
    "outputs": [],
    "source": [
-    "import csv\n",
+    "import sys\n",
     "import numpy as np\n",
     "import random as rand\n",
     "from sklearn import linear_model, preprocessing\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.cross_validation import KFold"
+    "from sklearn.cross_validation import KFold\n",
+    "from scipy.io import loadmat, savemat\n",
+    "import time"
    ]
   },
   {
@@ -46,26 +48,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#read training features\n",
-    "x=[]\n",
-    "temp=0\n",
-    "with open(\"../../data/combine_sample_and_course_train_x.csv\") as f:\n",
-    "    for row in csv.reader(f):\n",
-    "        if temp==0:\n",
-    "            for i in range(len(row)): \n",
-    "                x.append([])\n",
-    "            temp+=1\n",
-    "        else:\n",
-    "            for i,value in enumerate(row):\n",
-    "                x[i].append(float(value))\n",
-    "    f.close()\n",
-    "x=np.array(x)\n",
-    "dimensions=len(x)\n",
-    "x=np.transpose(x)"
+    "feat=loadmat('../../data/feat1.mat')"
    ]
   },
   {
@@ -76,21 +63,29 @@
    },
    "outputs": [],
    "source": [
-    "#read training truth\n",
-    "y=[]\n",
-    "with open('../../data/ML_final_project/truth_train.csv') as f:\n",
-    "    reader=csv.reader(f)\n",
-    "    for row in reader:\n",
-    "        for i, value in enumerate(row):\n",
-    "            if i!=0:\n",
-    "                y.append(float(value))\n",
-    "    f.close()\n",
-    "y=np.array(y)"
+    "#read training features\n",
+    "len_train=feat['len_train'][0][0]\n",
+    "x=np.concatenate((feat['x1_int'],feat['x1_float']),axis=1)\n",
+    "x=x[:len_train][:]\n",
+    "dimensions=len(x[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#read training truth\n",
+    "y=feat['y'][:len_train]\n",
+    "y=y[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -113,17 +108,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_Eval_01: 0.141068693847 best_n_components 31 best_c: 0.1\n",
-      "best_Eval_abs: 0.157898554505 best_n_components 10 best_c: 0.0001\n"
+      "1452839645.170092\n",
+      "817.4237508773804\n",
+      "1766.1499848365784\n"
      ]
     }
    ],
    "source": [
     "#training\n",
-    "n_folds=10\n",
+    "t0=time.time()\n",
+    "print(t0)\n",
+    "sys.stdout.flush()\n",
+    "n_folds=5\n",
     "c_list=list(range(-4,5))\n",
     "c_list[:]=[10 ** x for x in c_list]\n",
-    "n_components_list=range(10,dimensions)\n",
+    "n_components_list=[dimensions-1]\n",
     "best_Eval_01=1\n",
     "best_Eval_abs=1\n",
     "for c in c_list:\n",
@@ -158,107 +157,20 @@
     "            best_Eval_abs=sum(Eval_01)/n_folds\n",
     "            best_n_components_abs=n_components\n",
     "            best_c_abs=c\n",
+    "        print(time.time()-t0)\n",
+    "        sys.stdout.flush()\n",
     "print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
     "print(\"best_Eval_abs:\",best_Eval_abs,\"best_n_components\",best_n_components_abs,\"best_c:\",best_c_abs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#read testing data\n",
-    "x_test=[]\n",
-    "temp=0\n",
-    "with open('../../data/combine_sample_and_course_test_x.csv') as f:\n",
-    "    for row in csv.reader(f):\n",
-    "        if temp==0:\n",
-    "            for i in range(len(row)): \n",
-    "                x_test.append([])\n",
-    "            temp+=1\n",
-    "        else:\n",
-    "            for i,value in enumerate(row):\n",
-    "                x_test[i].append(float(value))\n",
-    "    f.close()\n",
-    "x_test=np.array(x_test)\n",
-    "x_test=np.transpose(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#training(track 1)\n",
-    "pca = PCA(n_components=best_n_components_abs)\n",
-    "pca.fit(x)\n",
-    "x_reduce = pca.transform(x)\n",
-    "logistic = linear_model.LogisticRegression(C=best_c_abs)\n",
-    "logistic.fit(x_reduce,y)\n",
-    "#predict testing data\n",
-    "x_test_reduce=pca.transform(x_test)\n",
-    "y_test_predict = logistic.predict_proba(x_test_reduce)\n",
-    "y_test_predict = y_test_predict[:,1]\n",
-    "output_track1=np.vstack((x_test[:,0],y_test_predict))\n",
-    "output_track1=np.transpose(output_track1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#write predict result to file\n",
-    "#with open(\"../../result/PCA_logisticReg/test_track1.csv\",\"w\") as f:\n",
-    "with open(\"../../result/PCA_logisticReg/test_track1_v2.csv\",\"w\") as f:\n",
-    "    w=csv.writer(f)\n",
-    "    w.writerows(output_track1)\n",
-    "    f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#training(track 2)\n",
-    "pca = PCA(n_components=best_n_components_01)\n",
-    "pca.fit(x)\n",
-    "x_reduce = pca.transform(x)\n",
-    "logistic = linear_model.LogisticRegression(C=best_c_01)\n",
-    "logistic.fit(x_reduce,y)\n",
-    "#predict testing data\n",
-    "x_test_reduce=pca.transform(x_test)\n",
-    "y_test_predict = logistic.predict(x_test_reduce)\n",
-    "output_track2=np.vstack((x_test[:,0],y_test_predict))\n",
-    "output_track2=np.transpose(output_track2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "with open(\"../../result/PCA_logisticReg/test_track2_v2.csv\",\"w\") as f:\n",
-    "    w=csv.writer(f)\n",
-    "    w.writerows(output_track2)\n",
-    "    f.close()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
