--- a/src/PCA_logisticReg/PCA_logisticReg_feat1_blending.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_feat1_blending.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import sys\n",
+    "import csv\n",
     "import numpy as np\n",
     "import random as rand\n",
     "from sklearn import linear_model, preprocessing\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.cross_validation import KFold\n",
-    "from scipy.io import loadmat, savemat\n",
-    "import time"
+    "from scipy.io import loadmat, savemat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -109,8 +108,7 @@
     "n_folds=10\n",
     "c_list=list(range(-4,5))\n",
     "c_list[:]=[10 ** x for x in c_list]\n",
-    "n_components_list=list(range(int(dimensions/2),dimensions))\n",
-    "rand.shuffle(n_components)\n",
+    "n_components_list=range(int(dimensions/4),int(dimensions/2))\n",
     "best_Eval_01=1\n",
     "best_Eval_abs=1\n",
     "for c in c_list:\n",
@@ -145,9 +143,58 @@
     "            best_Eval_abs=sum(Eval_01)/n_folds\n",
     "            best_n_components_abs=n_components\n",
     "            best_c_abs=c\n",
-    "        print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
-    "        print(\"best_Eval_abs:\",best_Eval_abs,\"best_n_components\",best_n_components_abs,\"best_c:\",best_c_abs)\n",
-    "        sys.stdout.flush()"
+    "print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
+    "print(\"best_Eval_abs:\",best_Eval_abs,\"best_n_components\",best_n_components_abs,\"best_c:\",best_c_abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#read testing data\n",
+    "x_test=np.concatenate((feat['x1_int'],feat['x1_float']),axis=1)\n",
+    "x_test=x_test[len_train:][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#training(track 1)\n",
+    "pca = PCA(n_components=best_n_components_abs)\n",
+    "pca.fit(x)\n",
+    "x_reduce = pca.transform(x)\n",
+    "logistic = linear_model.LogisticRegression(C=best_c_abs)\n",
+    "logistic.fit(x_reduce,y)\n",
+    "#predict testing data\n",
+    "x_test_reduce=pca.transform(x_test)\n",
+    "y_test_predict = logistic.predict_proba(x_test_reduce)\n",
+    "y_test_predict = y_test_predict[:,1]\n",
+    "output_track1=np.vstack((x_test[:,0],y_test_predict))\n",
+    "output_track1=np.transpose(output_track1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#write predict result to file\n",
+    "with open(\"../../result/PCA_logisticReg/test_track1_v3.csv\",\"w\") as f:\n",
+    "    w=csv.writer(f)\n",
+    "    w.writerows(output_track1)\n",
+    "    f.close()"
    ]
   },
   {
@@ -157,7 +204,33 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#training(track 2)\n",
+    "pca = PCA(n_components=best_n_components_01)\n",
+    "pca.fit(x)\n",
+    "x_reduce = pca.transform(x)\n",
+    "logistic = linear_model.LogisticRegression(C=best_c_01)\n",
+    "logistic.fit(x_reduce,y)\n",
+    "#predict testing data\n",
+    "x_test_reduce=pca.transform(x_test)\n",
+    "y_test_predict = logistic.predict(x_test_reduce)\n",
+    "output_track2=np.vstack((x_test[:,0],y_test_predict))\n",
+    "output_track2=np.transpose(output_track2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"../../result/PCA_logisticReg/test_track2_v3.csv\",\"w\") as f:\n",
+    "    w=csv.writer(f)\n",
+    "    w.writerows(output_track2)\n",
+    "    f.close()"
+   ]
   }
  ],
  "metadata": {
