add PCA+logisticReg blending

--- a/src/PCA_logisticReg/PCA_logisticReg_single_feat1.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_single_feat1.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "feat=loadmat('../../data/feat1.mat')"
+    "feat=loadmat(\"../../data/feat1.mat\")"
    ]
   },
   {
