--- a/src/PCA_logisticReg/PCA_logisticReg_single_feat1_server.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_single_feat1_server.ipynb
@@ -109,12 +109,14 @@
     "n_folds=10\n",
     "c_list=list(range(-4,5))\n",
     "c_list[:]=[10 ** x for x in c_list]\n",
+    "rand.shuffle(c_list)\n",
     "n_components_list=list(range(int(dimensions/2),dimensions))\n",
-    "rand.shuffle(n_components)\n",
+    "rand.shuffle(n_components_list)\n",
     "best_Eval_01=1\n",
     "best_Eval_abs=1\n",
     "for c in c_list:\n",
     "    for n_components in n_components_list:\n",
+    "        print(\"starting training model for c=\",c,\"n_components=\",n_components)\n",
     "        Ein_01=[]\n",
     "        Ein_abs=[]\n",
     "        Eval_01=[]\n",
@@ -142,7 +144,7 @@
     "            best_n_components_01=n_components\n",
     "            best_c_01=c\n",
     "        if sum(Eval_abs)/n_folds<best_Eval_abs:\n",
-    "            best_Eval_abs=sum(Eval_01)/n_folds\n",
+    "            best_Eval_abs=sum(Eval_abs)/n_folds\n",
     "            best_n_components_abs=n_components\n",
     "            best_c_abs=c\n",
     "        print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
