--- a/src/PCA_logisticReg/PCA_logisticReg_feat1_blending.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_feat1_blending.ipynb
@@ -8,7 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "import csv\n",
     "import numpy as np\n",
     "import random as rand\n",
     "from sklearn import linear_model, preprocessing\n",
@@ -47,11 +46,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "feat=loadmat('../../data/feat1.mat')"
+    "feat=loadmat(\"../../data/feat1.mat\")"
    ]
   },
   {
@@ -63,8 +62,8 @@
    "outputs": [],
    "source": [
     "#read training features\n",
-    "len_train=feat['len_train'][0][0]\n",
-    "x=np.concatenate((feat['x1_int'],feat['x1_float']),axis=1)\n",
+    "len_train=feat[\"len_train\"][0][0]\n",
+    "x=np.concatenate((feat[\"x1_int\"],feat[\"x1_float\"]),axis=1)\n",
     "x=x[:len_train][:]\n",
     "dimensions=len(x[0])"
    ]
@@ -78,123 +77,83 @@
    "outputs": [],
    "source": [
     "#read training truth\n",
-    "y=feat['y'][:len_train]\n",
+    "y=feat[\"y\"][:len_train]\n",
     "y=y[:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#preprocessing the training data\n",
-    "# preprocessing.normalize(x, norm='l2')\n",
-    "# min_max_scaler = preprocessing.MinMaxScaler()\n",
-    "# x=min_max_scaler.fit_transform(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#training\n",
-    "n_folds=10\n",
+    "n_folds=5\n",
+    "iterations=10000\n",
     "c_list=list(range(-4,5))\n",
     "c_list[:]=[10 ** x for x in c_list]\n",
-    "n_components_list=range(int(dimensions/4),int(dimensions/2))\n",
-    "best_Eval_01=1\n",
-    "best_Eval_abs=1\n",
-    "for c in c_list:\n",
-    "    for n_components in n_components_list:\n",
-    "        Ein_01=[]\n",
-    "        Ein_abs=[]\n",
-    "        Eval_01=[]\n",
-    "        Eval_abs=[]\n",
-    "        kf=KFold(len(x),n_folds=n_folds)\n",
-    "        for train_index, val_index in kf:\n",
-    "            x_train, x_val = x[train_index], x[val_index]\n",
-    "            y_train, y_val = y[train_index], y[val_index]\n",
-    "            pca = PCA(n_components=n_components)\n",
-    "            pca.fit(x_train)\n",
-    "            x_train_reduce = pca.transform(x_train)\n",
-    "            logistic = linear_model.LogisticRegression(C=c)\n",
-    "            logistic.fit(x_train_reduce,y_train)\n",
-    "            y_train_predict = logistic.predict_proba(x_train_reduce)\n",
-    "            y_train_predict = y_train_predict[:,1]\n",
-    "            Ein_01.append(E_01(y_train_predict,y_train))\n",
-    "            Ein_abs.append(E_abs(y_train_predict,y_train))\n",
-    "            x_val_reduce = pca.transform(x_val)\n",
-    "            y_val_predict = logistic.predict_proba(x_val_reduce)\n",
-    "            y_val_predict = y_val_predict[:,1]\n",
-    "            Eval_01.append(E_01(y_val_predict,y_val))\n",
-    "            Eval_abs.append(E_abs(y_val_predict,y_val))\n",
-    "        if sum(Eval_01)/n_folds<best_Eval_01:\n",
-    "            best_Eval_01=sum(Eval_01)/n_folds\n",
-    "            best_n_components_01=n_components\n",
-    "            best_c_01=c\n",
-    "        if sum(Eval_abs)/n_folds<best_Eval_abs:\n",
-    "            best_Eval_abs=sum(Eval_01)/n_folds\n",
-    "            best_n_components_abs=n_components\n",
-    "            best_c_abs=c\n",
-    "print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
-    "print(\"best_Eval_abs:\",best_Eval_abs,\"best_n_components\",best_n_components_abs,\"best_c:\",best_c_abs)"
+    "n_components_list=list(range(int(dimensions/4),int(dimensions/2)))\n",
+    "count=0\n",
+    "count_limit=30\n",
+    "output=np.empty((feat[\"len\"][0][0]))\n",
+    "for i in range(iterations):\n",
+    "    Ein_01=0\n",
+    "    Ein_abs=0\n",
+    "    Eval_01=0\n",
+    "    Eval_abs=0\n",
+    "    sample_index=np.random.randint(len(x),size=len(x))\n",
+    "    x_sample=x[sample_index,:]\n",
+    "    y_sample=y[sample_index]\n",
+    "    c=rand.choice(c_list)\n",
+    "    n_components=rand.choice(n_components_list)\n",
+    "    kf=KFold(len(x),n_folds=n_folds)\n",
+    "    for train_index, val_index in kf:\n",
+    "        x_train, x_val = x_sample[train_index], x_sample[val_index]\n",
+    "        y_train, y_val = y_sample[train_index], y_sample[val_index]\n",
+    "        pca = PCA(n_components=n_components)\n",
+    "        pca.fit(x_train)\n",
+    "        x_train_reduce = pca.transform(x_train)\n",
+    "        logistic = linear_model.LogisticRegression(C=c)\n",
+    "        logistic.fit(x_train_reduce,y_train)\n",
+    "        y_train_predict = logistic.predict_proba(x_train_reduce)\n",
+    "        y_train_predict = y_train_predict[:,1]\n",
+    "        Ein_01+=E_01(y_train_predict,y_train)\n",
+    "        Ein_abs+=E_abs(y_train_predict,y_train)\n",
+    "        x_val_reduce = pca.transform(x_val)\n",
+    "        y_val_predict = logistic.predict_proba(x_val_reduce)\n",
+    "        y_val_predict = y_val_predict[:,1]\n",
+    "        Eval_01+=E_01(y_val_predict,y_val)\n",
+    "        Eval_abs+=E_abs(y_val_predict,y_val)\n",
+    "    Eval_01/=n_folds\n",
+    "    Eval_abs/=n_folds\n",
+    "    if Eval_01<=0.17 or Eval_abs<=0.32:\n",
+    "        pca = PCA(n_components=n_components)\n",
+    "        pca.fit(x_sample)\n",
+    "        x_reduce = pca.transform(x_sample)\n",
+    "        logistic = linear_model.LogisticRegression(C=c)\n",
+    "        logistic.fit(x_reduce,y_sample)\n",
+    "        x_all=np.concatenate((feat[\"x1_int\"],feat[\"x1_float\"]),axis=1)\n",
+    "        x_all_reduce=pca.transform(x_all)\n",
+    "        y_all_predict = logistic.predict_proba(x_all_reduce)\n",
+    "        y_all_predict = y_all_predict[:,1]\n",
+    "        y_all_predict = np.transpose(y_all_predict)\n",
+    "        output=np.column_stack((output,y_all_predict))\n",
+    "        count+=1\n",
+    "    if count==count_limit:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#read testing data\n",
-    "x_test=np.concatenate((feat['x1_int'],feat['x1_float']),axis=1)\n",
-    "x_test=x_test[len_train:][:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#training(track 1)\n",
-    "pca = PCA(n_components=best_n_components_abs)\n",
-    "pca.fit(x)\n",
-    "x_reduce = pca.transform(x)\n",
-    "logistic = linear_model.LogisticRegression(C=best_c_abs)\n",
-    "logistic.fit(x_reduce,y)\n",
-    "#predict testing data\n",
-    "x_test_reduce=pca.transform(x_test)\n",
-    "y_test_predict = logistic.predict_proba(x_test_reduce)\n",
-    "y_test_predict = y_test_predict[:,1]\n",
-    "output_track1=np.vstack((x_test[:,0],y_test_predict))\n",
-    "output_track1=np.transpose(output_track1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#write predict result to file\n",
-    "with open(\"../../result/PCA_logisticReg/test_track1_v3.csv\",\"w\") as f:\n",
-    "    w=csv.writer(f)\n",
-    "    w.writerows(output_track1)\n",
-    "    f.close()"
+    "savemat(\"../../result/PCA_logisticReg/blending.mat\",{\"output\":output})"
    ]
   },
   {
@@ -204,33 +163,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#training(track 2)\n",
-    "pca = PCA(n_components=best_n_components_01)\n",
-    "pca.fit(x)\n",
-    "x_reduce = pca.transform(x)\n",
-    "logistic = linear_model.LogisticRegression(C=best_c_01)\n",
-    "logistic.fit(x_reduce,y)\n",
-    "#predict testing data\n",
-    "x_test_reduce=pca.transform(x_test)\n",
-    "y_test_predict = logistic.predict(x_test_reduce)\n",
-    "output_track2=np.vstack((x_test[:,0],y_test_predict))\n",
-    "output_track2=np.transpose(output_track2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "with open(\"../../result/PCA_logisticReg/test_track2_v3.csv\",\"w\") as f:\n",
-    "    w=csv.writer(f)\n",
-    "    w.writerows(output_track2)\n",
-    "    f.close()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
