update blending data to 100 models

--- a/src/PCA_logisticReg/PCA_logisticReg_feat1_blending.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_feat1_blending.ipynb
@@ -96,7 +96,7 @@
     "c_list[:]=[10 ** x for x in c_list]\n",
     "n_components_list=list(range(int(dimensions/4),int(dimensions/2)))\n",
     "count=0\n",
-    "count_limit=30\n",
+    "count_limit=100\n",
     "output=np.empty((feat[\"len\"][0][0]))\n",
     "for i in range(iterations):\n",
     "    Ein_01=0\n",
@@ -142,7 +142,8 @@
     "        output=np.column_stack((output,y_all_predict))\n",
     "        count+=1\n",
     "    if count==count_limit:\n",
-    "        break"
+    "        break\n",
+    "output=output[:,1:]"
    ]
   },
   {
