--- a/src/PCA_logisticReg/PCA_logisticReg_single_sample.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_single_sample.ipynb
@@ -146,7 +146,7 @@
     "            best_n_components_01=n_components\n",
     "            best_c_01=c\n",
     "        if sum(Eval_abs)/n_folds<best_Eval_abs:\n",
-    "            best_Eval_abs=sum(Eval_01)/n_folds\n",
+    "            best_Eval_abs=sum(Eval_abs)/n_folds\n",
     "            best_n_components_abs=n_components\n",
     "            best_c_abs=c\n",
     "print(\"best_Eval_01:\",best_Eval_01,\"best_n_components\",best_n_components_01,\"best_c:\",best_c_01)\n",
