--- a/src/PCA_logisticReg/PCA_logisticReg_single_feat1_time.ipynb
+++ b/src/PCA_logisticReg/PCA_logisticReg_single_feat1_time.ipynb
@@ -154,7 +154,7 @@
     "            best_n_components_01=n_components\n",
     "            best_c_01=c\n",
     "        if sum(Eval_abs)/n_folds<best_Eval_abs:\n",
-    "            best_Eval_abs=sum(Eval_01)/n_folds\n",
+    "            best_Eval_abs=sum(Eval_abs)/n_folds\n",
     "            best_n_components_abs=n_components\n",
     "            best_c_abs=c\n",
     "        print(time.time()-t0)\n",
